MOB_360_2017_1a_V6/objects/ONTAP__Order__c.object
<CustomObject>
    <fields>
        <fullName>RAS_CustID__c</fullName>
        <description>This field is used for Strike Rate dashboard in Mobility 360 Application.</description>
        <label>RAS_CustID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RAS_LocationWhslrNbr__c</fullName>
        <description>This field is used for Strike Rate dashboard in Mobility 360 Application.</description>
        <label>RAS_LocationWhslrNbr</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RAS_OrderSourceDetail__c</fullName>
        <description>This field is used for Strike Rate dashboard in Mobility 360 Application.</description>
        <label>RAS_OrderSourceDetail</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RAS_OrderSource__c</fullName>
        <description>This field is used for Strike Rate dashboard in Mobility 360 Application.</description>
        <label>RAS_OrderSource</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RAS_RouteKey__c</fullName>
        <description>This field is used for Strike Rate dashboard in Mobility 360 Application.</description>
        <label>RAS_RouteKey</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RAS_RouteNbr__c</fullName>
        <description>This field is used for Strike Rate dashboard in Mobility 360 Application.</description>
        <label>RAS_RouteNbr</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RAS_SubmitDateTime__c</fullName>
        <description>This field is used for Strike Rate dashboard in Mobility 360 Application.</description>
        <label>RAS_SubmitDateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>RAS_Volume__c</fullName>
        <description>This field is used for Strike Rate dashboard in Mobility 360 Application.</description>
        <label>RAS_Volume</label>
        <precision>13</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RAS_WSLRNbrCustIDRouteNbr__c</fullName>
        <description>This field is used for Strike Rate dashboard in Mobility 360 Application.</description>
        <externalId>true</externalId>
        <label>RAS_WSLRNbrCustIDRouteNbr</label>
        <length>255</length>
        <type>Text</type>
    </fields>
</CustomObject>